cargo-features = ["edition2024"]
[package]
name = "Minimal"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
glib = "0.21.1"
gtk = {version = " 0.9.6", package = "gtk4"}
libadwaita = "0.7.2"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
